     exiting (and/or start-up has aborted due to configuration or run-time
     issues). Warning about "world readable" files clarified. [#2417]

 - common code: root-owned daemons now use not the hard-coded `PIDPATH` value
   set by the `configure` script during build, but can override it with a
   `NUT_PIDPATH` environment variable in certain use-cases (such as tests).
   [#2407]

 - revised `nut.exe` (the NUT for Windows wrapper for all-in-one service)
   to be more helpful with command-line use (report that it failed to start
   as a service, have a help message, pass debug verbosity to launched NUT
   programs...) and add a man page for it. [issue #2432, PR #2446]

 - enabled installation of built single-file PDF and HTML (including man page
   renditions) under the configured `docdir`. It seems previously they were
   only built (if requested) but not installed via `make`, unlike the common
   man pages which are delivered automatically. [#2445]
+
   NOTE: The `html-chunked` documents are currently still not installed.

 - brought keyword dictionaries of `nutconf` and `augeas` NUT configuration
   file parsers up to date; restored automated checks for `augeas` lenses.
   [issue #657, issue #2294]
+
   NOTE: Some known issues remain with augeas lens definitions so currently
   they should be able to parse common simple use-cases but not certain types
   of more complex configurations (e.g. some line patterns that involve too
   many double-quote characters) which are valid for NUT proper. [#657]

 - various recipe, documentation and source files were revised to address
   respective warnings issued by the new generations of analysis tools.
   [#823, #2437, link:https://github.com/networkupstools/nut-website/issues/52[nut-website issue #52]]

 - bicker_ser: added new driver for Bicker 12/24Vdc UPS via RS-232 serial
   communication protocol, which supports any UPS shipped with the PSZ-1053
   extension module. [PR #2448]

