@@ -24,16 +24,17 @@
 #include "common.h"
 
 int main(void) {
-    const char *s1 = "!NULL";
-    const char *s2 = NULL;
+	const char *s1 = "!NULL";
+	const char *s2 = NULL;
+	int ret = 0;
 
 #if (defined HAVE_PRAGMA_GCC_DIAGNOSTIC_PUSH_POP) && (defined HAVE_PRAGMA_GCC_DIAGNOSTIC_IGNORED_FORMAT_OVERFLOW)
 #  pragma GCC diagnostic push
 #  pragma GCC diagnostic ignored "-Wformat-overflow"
 #endif
 
-    upsdebugx(0, "D: checking with libc handling of NULL (can segfault for some libc implementations):");
-    upsdebugx(0, "D:   '%s' vs '%s'", s1, s2);
+	upsdebugx(0, "D: checking with libc handling of NULL (can segfault for some libc implementations):");
+	upsdebugx(0, "D:   '%s' vs '%s'", s1, s2);
 
 /* This explicitly does not work with -Wformat, due to verbatim NULL without a var:
  * nutlogtest.c:20:5: error: reading through null pointer (argument 4) [-Werror=format=]
@@ -43,7 +44,7 @@ int main(void) {
  *   upsdebugx(0, "D: '%s' vs '%s'", NUT_STRARG((char *)NULL), (char *)NULL);
  */
 
-    upsdebugx(0, "D: checking with NUT_STRARG macro: '%s' vs '%s'", NUT_STRARG(s2), s2);
+	upsdebugx(0, "D: checking with NUT_STRARG macro: '%s' vs '%s'", NUT_STRARG(s2), s2);
 
 #ifdef NUT_STRARG
 #undef NUT_STRARG
@@ -59,11 +60,45 @@ int main(void) {
  *      45 |     upsdebugx(0, "D: checking with NUT_STRARG macro: '%s' vs '%s'", NUT_STRARG(s2), s2);
  *         |                                                               ^~
  */
-    upsdebugx(0, "D: checking that macro wrap trick works: '%s' vs '%s'", NUT_STRARG(s2), s2);
+	upsdebugx(0, "D: checking that macro wrap trick works: '%s' vs '%s'", NUT_STRARG(s2), s2);
 
 #if (defined HAVE_PRAGMA_GCC_DIAGNOSTIC_PUSH_POP) && (defined HAVE_PRAGMA_GCC_DIAGNOSTIC_IGNORED_FORMAT_OVERFLOW)
 #  pragma GCC diagnostic pop
 #endif
 
-    return 0;
+	if (1) {	/* scoping */
+		char *dynfmt = "Test '%s'", *p;
+		char buf[LARGEBUF];
+
+		if (snprintf_dynamic(buf, sizeof(buf), dynfmt, "%s", "Single string via dynamic format") > 0) {
+			upsdebugx(0, "D: >>> %s", buf);
+			if (!strcmp(buf, "Test 'Single string via dynamic format'")) {
+				upsdebugx(0, "D: snprintf_dynamic() prepared a dynamically formatted string with expected content");
+			} else {
+				upsdebugx(0, "E: snprintf_dynamic() failed to prepare a dynamically formatted string: got unexpected content");
+				ret++;
+			}
+		} else {
+			upsdebugx(0, "E: snprintf_dynamic() failed to prepare a dynamically formatted string: returned empty or error");
+			ret++;
+		}
+
+		if (snprintf_dynamic(buf, sizeof(buf), dynfmt, "%s%d", "Single string via dynamic format", 1) < 0) {
+			upsdebugx(0, "D: snprintf_dynamic() correctly reports mis-matched formats");
+		} else {
+			upsdebugx(0, "E: snprintf_dynamic() wrongly reports well-matched formats");
+			ret++;
+		}
+
+		/* Note extra non-type chars in "expected" format are stripped */
+		p = mkstr_dynamic(dynfmt, " %.4s %%", "Single string inlined by mkstr_dynamic()");
+		upsdebugx(0, ">>> %s", NUT_STRARG(p));
+		if (!p || *p == '\0' || strcmp(p, "Test 'Single string inlined by mkstr_dynamic()'")) {
+			upsdebugx(0, "E: mkstr_dynamic() failed to prepare a dynamically formatted string: got unexpected content");
+		} else {
+			upsdebugx(0, "D: mkstr_dynamic() prepared a dynamically formatted string with expected content");
+		}
+	}
+
+	return ret;
 }
