@@ -121,6 +121,10 @@ https://github.com/networkupstools/nut/milestone/11
    `NUT_PIDPATH` environment variable in certain use-cases (such as tests).
    [#2407]
 
+ - common code hardening: added sanity-checking for dynamically constructed or
+   selected formatting strings with variable-argument list methods (typically
+   used with log printing, `dstate` setting, etc.) [#2450]
+
  - revised `nut.exe` (the NUT for Windows wrapper for all-in-one service)
    to be more helpful with command-line use (report that it failed to start
    as a service, have a help message, pass debug verbosity to launched NUT
